# binary-size-profiler

./: .gitignore  Cargo.toml  README.md
src/: main.rs
