[package]
name = "size-profiler"
version = "0.1.0"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.16.0"
addr2line = "0.15.1"
locate-dwarf = "0.1.0"
gimli = "0.26.1"
symbolic-debuginfo = "8.5.0"
wholesym = "0.7.0"
futures = "0.3.31"
fxprof-processed-profile = "0.8.0"
serde_json = "1.0.138"

[profile.release]
debug = true
symbol-mangling-version = "v0"
