[package]
name = "binary-size-profiler"
version = "0.1.0"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.36"
wholesym = "0.8.0"
uuid = "1.12"
futures = "0.3.31"
fxprof-processed-profile = "0.8.0"
serde_json = "1.0.138"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }
mimalloc = { version = "*" }
indicatif = "0.17"

[profile.release]
debug = true
symbol-mangling-version = "v0"
